[package]
name = "egui_example"
version = "0.1.0"
authors = ["Nils Hasenbanck <nils@hasenbanck.de>"]
edition = "2021"

[dependencies]
chrono = "0.4"
pollster = "0.3"
egui = "0.23"
egui_winit_platform = "0.20"
egui_demo_lib = "0.23"
egui_wgpu_backend = "0.27"
epi = "0.17"
wgpu = "0.18"
winit = { version = "0.28", features = ["x11"] }

# [patch.crates-io]
# egui_wgpu_backend = { path = "../egui_wgpu_backend" }
# egui_winit_platform = { path = "../egui_winit_platform" }
